--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -28,25 +28,13 @@ jobs:
       - name: 크롤링 코드 실행
         run: python crawling_script.py
 
-        
-
-      - name: 결과를 GitHub 저장소에 저장
-        run: |
-          git config --global user.name "cowcompany"
-          git config --global user.email "cowcompany1@gmail.com"
-          git init  # ✅ 저장소 초기화 (필수)
-          git add data/*.csv
-          git commit -m "자동 크롤링 데이터 저장: $(date)"
-          git branch -M main  # ✅ 브랜치가 없을 경우 main으로 변경
-          git push -u origin main
-
       - name: Git 설정 및 결과 저장
         run: |
           git config --global user.name "cowcompany"
           git config --global user.email "cowcompany1@gmail.com"
           git init
-          
-          # 🔹 데이터 폴더가 비어있지 않으면 push 실행
+
+          # 🔹 CSV 파일이 있을 경우만 push 실행
           if [ -n "$(ls -A data/*.csv 2>/dev/null)" ]; then
             git add data/*.csv
             git commit -m "자동 크롤링 데이터 저장: $(date)"
